# luajit-cmake

./: CMakeLists.txt  LuaJIT.cmake  ffi.cmake  readme.md
host/buildvm/: CMakeLists.txt
host/minilua/: CMakeLists.txt
